--- a/_book-wordpress-to-jekyll/17.md
+++ b/_book-wordpress-to-jekyll/17.md
@@ -2,7 +2,13 @@
 title: Testing the Website
 ---
 
-Once everything is set up:
+Having the ability to see your changes live and in real time is one of the best things about Jekyll. As you develop the webist or type away at an article each time you save your website will get regenerated so you can have a live look on how it will actually look once it goes live.
 
-- Run or `jekyll serve`. If you have a file called Gemfile run `bundle install` to install the dependencies, followed by `bundle exec jekyll serve` otherwise simply run `jekyll serve`.
-- Go to [http://localhost:4000](http://localhost:4000) and poke around at the website.
+This is also great for designing a new website since you can see how a change in a font, color or layout affects the website without having to build it and deploy it on a server.
+
+The process is really easy, once everything is set up we simply need to run `jekyll serve`.
+
+For some themes you might have a file called Gemfile at the base of your Jekyll installation. If that's the case you need to first install your dependencies. Run `bundle install` to install them, followed by `bundle exec jekyll serve`. Remember to always prepend `bundle exec` before running `jekyll serve` in this case.
+
+
+Your site should now be live. Go to [http://localhost:4000](http://localhost:4000) and poke around it for a while.
