Update and rename 2019-12-04-bitrise-ios.md to 2019-12-04-bitrise.md

--- a/_posts/2019-12-04-bitrise.md
+++ b/_posts/2019-12-04-bitrise.md
@@ -98,19 +98,32 @@ Updates the build cache to speed up subsequent builds.
 ### Android Application Setup
 
 - Activate SSH key
+This will enable SSH access to be able to clone the repository.
 - Git clone repository
+Clones the remote repository to Bitrise.
 - Bitrise cache pull
-- run script
-- install missing android sdk
-- android unit test
+If there is something in the cache this will speed up the build process.
+- Run script
+We run a custom script to set up various environment variables for accessing the keystore file.
+- Install missing android sdk
+Install whatver SDK we need in order to run the application.
+- Run Android unit test
+We run the unit test suite and only if successful we proceed to the next step.
 - Deploy to bitrise.io
-- cache push
+Makes the generated application available to download directly from Bitrise web interface.
+- Cache push
+Updates the build cache to speed up subsequent builds.
+
+
+As you can see most of the process is shared between the two apps.
 
 ## Conclusion
 
-While we are not using Bitrise for Continuous Deployment, all our deployments still happen manually, we can be confident that each time we push a new commit or open a pull request the app will build and pass all tests so anybody can clone it without worries.
+While we are not using Bitrise for Continuous Deployment we can be confident that each time we push a new commit or open a pull request the app will build and pass all tests so anybody can clone the branch without worries.
 
-Source
+Even if all your deployments still happen manually you can also take advantage of the generated application bundle / ipa to upload to the various stores without having to generate it again manually.
+
+*Source:*
 [Webhooks setup][1]
 
 [1]: https://github.com/bitrise-io/bitrise-webhooks#gitlab---setup--usage
