Update and rename 2019-12-20-reading.md to 2019-12-20-reading-2019.md

--- a/_posts/2019-12-20-reading-2019.md
+++ b/_posts/2019-12-20-reading-2019.md
@@ -21,23 +21,31 @@ Reading should be something that you do because you enjoy it, not something that
 
 You need to read with an open mind and will. Having a forced limit is counterproductive to that objective.
 
-## What I've been reading
+## What I've been reading in 2019
 
-I'm mostly been reading Fantasy book for fiction and Business books for non fiction.
+I'm mostly been reading Fantasy books for fiction and Business books for non fiction.
 
 Non Fiction:
 
-The non fiction section has been dominated by Basecamp. On top of the books I'm also listening to the [podcast][1].
+The non fiction section has been dominated by Basecamp.
 
 - Getting Real by Basecamp
 - Rework by Basecamp
 - Remote by Basecamp
 - Shape Up by Basecamp
-- It doesn't have to be crazy at wotk by Basecamp
+- It doesn't have to be crazy at work by Basecamp
+
+On top of the books I'm also listening to the [podcast][1], I especially recommend the episodes with the CEO of WordPress about the future of the web and of 1Password about their first founding round and what it means getting VC funding.
+
 
 Fiction:
 
 - Oathbringer by Brandon Sanderson
+- Arcanum Unbounded by Brandon Sanderson
 The fantasy author to look for. His books deliver consitently and he writes at an unmatched pace.
+- Fire & Blood by George R R Martin
+Fire & Blood is not Winds of Winter unfortunately. The book was pretty meh, but the backstory of Aegon and how he Targaryens rose to claim the 7 kingdoms was interesting regardless.
+
+Next year I plan to keep reading more business/productivity related books and get up to par with the rest of Brandon Sanderson books. Pretty sure that will take the whole year so I will not add any other book for the times being.
 
 [1]: https://rework.fm/
