--- a/_book-wordpress-to-jekyll/16.md
+++ b/_book-wordpress-to-jekyll/16.md
@@ -60,7 +60,7 @@ Next up is actually setting up the website with Jekyll on our local machine.
 [4]: https://help.github.com/en/enterprise/2.15/user/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent
 [5]: https://help.github.com/en/articles/testing-your-ssh-connection
 [6]: https://help.github.com/en/articles/error-permission-denied-publickey
-[7]: {% post_url Password-Manager %}
+[7]: {% post_url 2019-09-04-Password-Manager%}
 [8]: {% post_url 2014-05-06-Do-you-have-a-password-manager %}
 
 
