--- a/_book-wordpress-to-jekyll/17.md
+++ b/_book-wordpress-to-jekyll/17.md
@@ -2,13 +2,13 @@
 title: Testing the Website
 ---
 
-Having the ability to see your changes live and in real time is one of the best things about Jekyll. As you develop the webist or type away at an article each time you save your website will get regenerated so you can have a live look on how it will actually look once it goes live.
+Having the ability to see every change to your website as you make them is one of the best things about Jekyll. As you develop the website or type away at an article and you save the file you're working on the website will regenerate and can be seen updated from the browser. You could even have the editor on one half of the screen and the browser in the other half.
 
-This is also great for designing a new website since you can see how a change in a font, color or layout affects the website without having to build it and deploy it on a server.
+This is good to look at the layout of a new article, but it even better when you're designing a new website. You can see how a change in a font, color or layout affects the overall website without having to build it and deploy it on a server.
 
-The process is really easy, once everything is set up we simply need to run `jekyll serve`.
+The process is really easy and works out of the box. Once Jekyll is set up we simply need to run `jekyll serve`.
 
-For some themes you might have a file called Gemfile at the base of your Jekyll installation. If that's the case you need to first install your dependencies. Run `bundle install` to install them, followed by `bundle exec jekyll serve`. Remember to always prepend `bundle exec` before running `jekyll serve` in this case.
+For some themes you might have a file called Gemfile at the base of your Jekyll installation. If that's the case you need to first install the dependencies before being able to deploy the website. Run `bundle install` to install them, followed by `bundle exec jekyll serve`. Remember to always prepend `bundle exec` to `jekyll serve` before running if this is the case.
 
 
 Your site should now be live. Go to [http://localhost:4000](http://localhost:4000) and poke around it for a while.
