--- a/_book-wordpress-to-jekyll/18.md
+++ b/_book-wordpress-to-jekyll/18.md
@@ -3,24 +3,57 @@ title: Initial Configuration
 ---
 
 <a name="#site-structure"></a>
-Open `_config.yml` and set up basic information for your website, on top of most of the configuration details:
 
-NOTE: For the images you can check the average dimension they should be by going to `assets/images`
+Now that we have the website up and running we can start to customize it. The first step is to open the `_config.yml` file in the base directory.
 
-- **`gems:`** : Plugins in use
-- **`title`** : The title of your website
-- **`description`** : The "motto" that will appear right under the title
-- **`email`** : Your email
-- **`logo`** : The image to be used as the logo
-- **`cover`** : The image to be used as the cover image
-- **`name`** : Your name or pseudonym
-- **`author`** : Your name or pseudonym, or the name of the default writer for the site
-- **`author_image`** : Your picture (small)
-- **`paginate`** : The number of articles per page
-- **`url`** : The URL of your website (root URL)
-- **`baseurl`** : The URL for your Jekyll site (usually empty `baseurl: ""`, fill it in if you want only a folder of your site to be managed by Jekyll)
-- **`twitter_handle`** : Your Twitter handle, starting with `@` (not the URL)
-- **`social`** : For each social link you want to add you'll need to add the following snippet:
+From there you can set up the basic website information, and add custom configuration details. The file is setup as `key: value`. If you find this part too confusing you can find a ready to go basic configuration file at the end of the chapter.
+
+What follows is a list with the most important keys and their use, you can find more keys by looking at the [official documentation][1]:
+
+
+- **`plugins:`**
+A list of ruby plugins to bundle with the website.
+
+- **`title`**
+The title of your website.
+
+- **`description`**
+The "motto" that will appear right under the title.
+
+- **`email`**
+Your email.
+
+- **`logo`**
+The image to be used as the logo.
+
+- **`cover`**
+The image to be used as the cover image.
+
+- **`name`**
+Your name or pseudonym.
+
+- **`author`**
+Your name or pseudonym, or the name of the default writer for the site.
+
+- **`author_image`**
+Your picture (small).
+
+- **`paginate`**
+The number of articles per page.
+
+- **`url`**
+The URL of your website (root URL).
+
+- **`baseurl`**
+The URL for your Jekyll site (usually empty `baseurl: ""`, fill it in if you want only a folder of your site to be managed by
+Jekyll).
+
+- **`twitter_handle`**
+Your Twitter handle, starting with `@` (not the URL).
+
+- **`social`**
+For each social link you want to add you'll need to add the following snippet:
+
 
 ````
   - icon:    twitter
@@ -48,3 +81,57 @@ Notice that this can be used also with non-social links if you want. I've done s
 ```
 
 - **`permalink`** : Which kind of permalink you want for your articles. Default is `/year/month/day/title.html`, I changed it to `/title.html` using: `permalink: /:title.html`. You could also add a `/blog/title.html` if you prefer, doing so: `permalink: /blog/:title.html`
+
+## Example File
+
+This is a simplified version of the configuration file I'm currently using. There are a few additional components in addition to the standard entries explained above.
+
+```
+webrick:#1
+  headers:
+    X-Content-Type-Options: nosniff
+    X-Frame-Options: deny
+    X-XSS-Protection: 1; mode=block
+
+plugins:
+  - jekyll-sitemap
+
+title: "My Website"
+description: Website Description
+
+email: my@email.com
+
+name: "my name"
+author: "my name"
+author_image: "assets/image.png"
+
+url: "http://www.example.com"
+baseurl: ""
+
+permalink: /:title.html
+
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "post"
+
+exclude: [vendor]
+
+future: false#2
+
+assets:#3
+  destination: "/assets"
+  compression: true
+  caching:
+    path: ".jekyll-cache/assets"
+    type: file # Possible values: memory, file
+    enabled: true
+
+```
+
+1. We can add custom headers to the website (for example security headers)
+2. Do not publish articles with a publication date in the future
+3. Automatically cache assets
+
+[1]: https://jekyllrb.com/docs/configuration/
