--- a/_book-wordpress-to-jekyll/38.md
+++ b/_book-wordpress-to-jekyll/38.md
@@ -1,3 +1,21 @@
 ---
 title: Extra - Configuring CloudFlare
 ---
+
+Cloudflare
+
+To be able to configure cloudflare you need to have the ability of changing the nameservers from your DNS provider. The DNS provider is usually your domain registrar. Somewhere in their configuration panel there should be an option to change the DNS records for the website. During the configuration process Cloudflare will provide the 2 new nameserver addresses to use, you will need to delete your provider's addresses and replace them with the Cloudflare provided ones. This will reroute all the traffic through cloudflare before hitting your website. This way Cloudflare can cache the request and even add a free SSL certificate to your website before serving to your users. For our use Cloudflare will be free, but they have a paid plan for more advanced use cases.
+
+## Setup Caching
+
+The main advantage of Cloudflare is that it is an edge node, meaning that it has more than 200 datacenter in the world and your website will be cached there so that it can be server from whatewver node is closest to your users drastically reducing load time. By doing that most of the requests won't hit your server at all, this is not really a problem for a static website hosted on Github since Github provides the bandwith for free, but if you were using your own server to host it this would result in less bandwith used which translates to less expenses.
+
+You can set up the cache from ...
+
+A ddrawback of this is that since now clodflare is keeping a cache your most recent changes will not go live immediately, but you will need to wait until the time you've setup the cache to last exprires. You can bypass this by clearing the cache from Clouflare admin panel.
+
+## Setup SSL
+
+Clouflare proivides a free SSL certificate to all domains.
+
+You can also force a redirection to https for all requests and even block all non https traffic by using HSTS. You can turn it back off, but it may take a long time for the change to register and for this time your website needs to have an SSL certificate or it will not load. This change will take as long as it is defined in the `max-age` parameter of your HSTS configuration.
