--- a/_book-wordpress-to-jekyll/19.md
+++ b/_book-wordpress-to-jekyll/19.md
@@ -2,20 +2,20 @@
 title: Plugins
 ---
 
-**Note**: According to an answer to my StackOverflow question and answers from Github directly plugins are not officially supported by Github Pages. Use them at your own risk.
-**Update**: According to Github **some** plugins are [now officially supported](https://github.com/jekyll/jekyll/issues/325)
+**Note**: According to an answer on [StackOverflow][1] plugins are not officially supported by Github Pages. Use them at your own risk. According to Github **some** plugins are [now officially supported](https://github.com/jekyll/jekyll/issues/325), but the majority of them remain unsupported.
 
-While building the site I noticed that a few important features were missing to the theme. I always wanted to have an estimated time of how long it takes to read an article and how many words it is.
+While building the site I noticed that a few important features were missing from the theme. For example I always wanted to have an estimated time of how long it takes to read an article and how many words it is so that a reader can quickly decide if they have the time to read it right now or prefer to come back to it later.
 
-Doing so I also [opened a pull request](https://github.com/gjtorikian/jekyll-time-to-read/pull/1) to have the first letter made uppercase, cause it looks way better.
+Doing that requires installing the `jekyll-time-to-read` plugin. To define it as a dependency for the website add it to `_config.yml` under plugins:
 
-Plugins installed on top of the ones already included with the theme:
-- jekyll-time-to-read
-- jekyll-sitemap
+```
+plugins:
+  - jekyll-time-to-read
+```
 
-To install them add them both to `_config.yml` and to the `Gemfile` (Example: `gem "jekyll-time-to-read"`). Open the Terminal and run `bundle install`.
+And in the `Gemfile` by adding the line `gem "jekyll-time-to-read"`. To install it open the Terminal and run `bundle install`.
 
-To properly configure the `jekyll-time-to-read` plugin I added it after the author field at the top of each article. I only want it for articles so I added it to `post.html` in the `_layouts` folder:
+To properly configure it you need to decide where to show the counter in the page. For my website I added it after the author field at the top of each article, but you can put it wherever you want. I also only wanted it for articles and not pages so I only added it to `post.html` template in the `_layouts` folder:
 
 ```
 
@@ -25,3 +25,25 @@ To properly configure the `jekyll-time-to-read` plugin I added it after the auth
                - {{ page.content | number_of_words }} Words - {{ content | reading_time_as_i }}.
             </div>
 ```
+
+You can find a list of user curated plugins on [GitHub][2]. A few of my personal favorites are:
+
+- jekyll-sitemap
+Jekyll does not automatically generate a sitemap for you so this plugin will do it automatically each time you build the website.
+- jekyll-feed
+Adds an RSS Feed to the website.
+- jekyll-paginate
+Adds pagination to the website so the content gets split into different pages.
+- jekyll-tagging-related_posts
+Adds links to related posts based on tags.
+- jekyll-archives
+Adds an archive page for categories and tags.
+- jekyll-mentions
+Adds @mention support.
+- jekyll-import
+Adds support for import articles from other blogging engines.
+
+
+
+[1]: https://stackoverflow.com/questions/20369397/jekyll-plugin-not-work-on-github
+[2]: https://github.com/planetjekyll/awesome-jekyll-plugins
