--- a/_book-wordpress-to-jekyll/20.md
+++ b/_book-wordpress-to-jekyll/20.md
@@ -2,13 +2,22 @@
 title: More About Your Site Structure
 ---
 
-We've already done [a basic introduction](#site-structure) on the site structure and what each folder contains. Now we will go more in detail for each section;
+We've already done [a basic introduction](#site-structure) of the folder structure of the site and what each folder contains. We are not going to examine each section in more detail:
 
-- **`_config.yml`** : The main configuration file for your site. [Covered here](#Initial-configuration).
-- **`Gemfile`** : Includes all your plugins. [Covered here](#Plugins).
-- **`_include`** : The html files for your header and footer, here you can add additional files to be included in any of your layouts. For example, I added a file for my navigation menu so I don't have to copy it to every page each time.
-- **`_layouts`** : The different layouts, the default ones are for pages, articles and a general one. You can freely add more or modify the existing ones.
-- **`_posts`** : Here is where all your articles reside. Every post in this folder will be published, create a `_drafts` folder to store unpublished drafts. Each post to be parsed needs to start with:
+- **`_config.yml`**
+The main configuration file for your site. [Covered under initial configuration](#Initial-configuration).
+
+- **`Gemfile`**
+Includes all your plugins. [Covered under plugins](#Plugins).
+
+- **`_include`**
+The html files for your header and footer, here you can add additional files to be included in any of your layouts. For example, I added a file for my navigation menu so I don't have to copy it to every page each time.
+
+- **`_layouts`**
+The different layouts, the default ones are for pages, articles and a general one. You can freely add more or modify the existing ones.
+
+- **`_posts`**
+Here is where all your articles reside. Every post in this folder will be published, create a `_drafts` folder to store unpublished drafts. Each post to be parsed needs to start with:
 
 ```
 ---
@@ -21,15 +30,22 @@ status: publish
 author: Valentino Urbano
 ---
 
-Content of the Post
+Content of the Article
 ```
 
-(Note the `——-` at the top and after the info)
+Note the `——-` at the top and after the info. Those are called liquid tags and are used to delimit the header of an article from its content. The header will not be displayed in the generated page, but it will be used to generate its metadata such as title or publish date.
 
-- **`assets`** : All the images and downloadable content for your website needs to be put here, it'll be accessible directly from `assets/fileName`
-- **`css`** : All the CSS will go here
-- **`_sass`** : All the sass will go here (just leave it be if you don't know what it is and don't want to use it for now). It will automatically be compiled down to CSS by Jekyll.
-- **Other Folders** : You can add pages, for example `/about` by simply adding folders and putting `index.md / index.markdown / index.html` files in it. Note that the file needs to be named "index". Every page to be parsed needs to start with:
+- **`assets`**
+All the images and downloadable content for your website needs to be put here, it'll be accessible directly from `assets/fileName`
+
+- **`css`**
+This folder includes all the CSS files that set up the theme of the website.
+
+- **`_sass`**
+All the sass will go here (just leave it be if you don't know what it is and don't want to use it for now). It will automatically be compiled down to CSS by Jekyll.
+
+- **Other Folders**
+You can add pages, for example `/about` by simply adding folders and putting `index.md / index.markdown / index.html` files in it. Note that the file needs to be named "index". Every page to be parsed needs to start with:
 
 ```
 ---
@@ -38,6 +54,12 @@ title: Title of the page
 ---
 ```
 
-- **`index.html`** : The homepage of your website
-- **`_site`** : This folder is generated automatically, you can look at it, but don't modify anything (If you do it'll just get overwritten the next time you build)
-- **`CNAME`** : If you're using a custom domain name you will need to include it here. The content of mine is: `www.valentinourbano.com`
+
+- **`index.html`**
+The homepage of your website
+
+- **`_site`**
+This folder is generated automatically, you can look at it, but don't modify anything (If you do it'll just get overwritten the next time you build)
+
+- **`CNAME`**
+If you're using a custom domain name you will need to include it here. The content of mine is: `www.valentinourbano.com`
