--- a/_book-wordpress-to-jekyll/16.md
+++ b/_book-wordpress-to-jekyll/16.md
@@ -43,14 +43,14 @@ Now that you have generated a key and added it to the agent you can Log In to Gi
 - Go to "Settings" > "SSH and GPG keys".
 - Open your terminal and print your public key by running `cat ~/.ssh/id_rsa.pub`, copy the output. Make sure to copy the `.pub` file and NOT the private key. You should never share the private key with anyone.
 - Go back to Github and click on "New SSH key"
-- Paste your PUBLIC key in the field. You can also give it a name to remember the device it came from. If you're only using one device to connect to your Github account this may be superfluos, but if you plan on using multiple devices it will be easier in the future to remove a key from a device you're no longer using if you can figure out which machine it is by its name.
+- Paste your PUBLIC key in the field. You can also give it a name to remember the device it came from. If you're only using one device to connect to your Github account this may be superfluous, but if you plan on using multiple devices it will be easier in the future to remove a key from a device you're no longer using if you can figure out which machine it is by its name.
 
 #### Testing out the connection
 
 The final step is to test our setup. We should now be able to connect to Github via SSH and be logged in.
 
 - Go back to your Terminal and run `ssh -T git@github.com`. Type yes when it prompts you to continue[^1].
-- If you see "You've successfully authenticated, but GitHub does not provide shell access." it means that you've set up everything correctly, otherwise [check out Github's troubleshooting steps][6] to figure out what went wrong. The most common cause is that you rebooted and did not save your password to the keychain, but the previous steps should have avoided that pityfall.
+- If you see "You've successfully authenticated, but GitHub does not provide shell access." it means that you've set up everything correctly, otherwise [check out Github's troubleshooting steps][6] to figure out what went wrong. The most common cause is that you rebooted and did not save your password to the keychain, but the previous steps should have avoided that pitfall.
 
 We're are not going to set up or push to a repository yet. We've set up the key not so that we don't have to go through the lengthy process of setting up a key once everything is ready.
 
@@ -60,8 +60,8 @@ Next up is actually setting up the website with Jekyll on our local machine.
 [4]: https://help.github.com/en/enterprise/2.15/user/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent
 [5]: https://help.github.com/en/articles/testing-your-ssh-connection
 [6]: https://help.github.com/en/articles/error-permission-denied-publickey
-[7]: {% post_url 2019-09-04-Password-Manager%}
-[8]: {% post_url 2014-05-06-Do-you-have-a-password-manager %}
+[7]: {% post_url 2019-09-04-Password-Manager %}
+[8]: {% post_url 2019-01-31-2014-05-06-###-Do-you-have-a-password-manager-- %}
 
 
 [^1]: If you want to check that you're really connecting to Github you can check the RSA fingerprint displayed in your terminal to the ones [provided by Github][5].
