--- a/_posts/2019-12-20-reading-2019.md
+++ b/_posts/2019-12-20-reading-2019.md
@@ -17,7 +17,7 @@ Most kids my age used to go out and drink. I used to stay home and read. Yes, I 
 
 In these last few months I'm trying to read whenever I can, before that I would only read one or two books a year. This year I've read 5 books so far and I'm on track to read at least one more by the end of the year. I could read way more if I forced myself to, but I don't want to force it too much.
 
-Reading should be something that you do because you enjoy it, not something that you do to hit a target of "number of books to read in [insert a specific timeframe]".
+Reading should be something that you do because you enjoy it, not something that you do to hit a target of "number of books to read in [insert a specific timescale]".
 
 You need to read with an open mind and will. Having a forced limit is counterproductive to that objective.
 
