--- a/_posts/2019-12-24-rest.md
+++ b/_posts/2019-12-24-rest.md
@@ -12,11 +12,11 @@ author: Valentino Urbano
 ---
 
 
-The Christmas holidays are one of the few periods of the year when you can really rest for a while if you decide to do so.[^1] 
+The Christmas holidays are one of the few periods of the year when you can really rest for a while if you decide to do so.[^1]
 
 I usually see the holidays as a period where you can power through and clash the last resistance into releasing a project, but this time I want to do something differently.[^2]
 
-As indies we're always looking for time to dedicate to our belowed side projects, this often erodes into family time. It is mostly an exchange that we recognized it's there an accept it, but at least for one holiday a year family should come first. It would be great if we would not be forced to make a choices and being able to do both, but unfortunately there are only so few hours in a day.
+As indies we're always looking for time to dedicate to our beloved side projects, this often erodes into family time. It is mostly an exchange that we recognized it's there an accept it, but at least for one holiday a year family should come first. It would be great if we would not be forced to make a choices and being able to do both, but unfortunately there are only so few hours in a day.
 
 There you have it:
 This year I will not work on any side project until the end of the year and instead just enjoy the time with my family.
