--- a/_book-wordpress-to-jekyll/10.md
+++ b/_book-wordpress-to-jekyll/10.md
@@ -1,5 +1,6 @@
 ---
 title: Install RVM and Ruby
+order_number: 10
 ---
 
 Before installing Jekyll itself we still need to install a few dependencies. If you're a developer you might already have them installed, if so you can skip this section.
