--- a/_book-wordpress-to-jekyll/12.md
+++ b/_book-wordpress-to-jekyll/12.md
@@ -1,5 +1,6 @@
 ---
 title: Setting up your GitHub pages repository
+order_number: 12
 ---
 
 Now that we have installed Jekyll locally we need to start thinking about where to host our website. There are many alternative services that offer free or paid static website hosting. We are going to focus on the free ones. The two major ones being Github and Gitlab.
