--- a/_book-wordpress-to-jekyll/13.md
+++ b/_book-wordpress-to-jekyll/13.md
@@ -1,5 +1,6 @@
 ---
 title: New Repository
+order_number: 13
 ---
 
 In the previous chapter we have created a new empty repository on Github and synced it to our machine. We can now open the Terminal, navigate to it and run `jekyll new`. This will automatically generate a base website using the default Jekyll template for you to get started quickly[^3].
