--- a/_book-wordpress-to-jekyll/14.md
+++ b/_book-wordpress-to-jekyll/14.md
@@ -1,5 +1,6 @@
 ---
 title: Forked a theme
+order_number: 14
 ---
 
 If you've forked a theme instead, you should follow the theme's installation instructions. They are all fairly similar, but the may slightly vary for each time so the best thing to do is to directly go to the page where you downloaded the theme and follow the step by step guide for it.
