--- a/_book-wordpress-to-jekyll/16.md
+++ b/_book-wordpress-to-jekyll/16.md
@@ -1,5 +1,6 @@
 ---
 title: Setting up your machine for SSH access to Github
+order_number: 16
 ---
 
 [**If you've already set up your machine for SSH access to Github, or if you're used doing it, freely skip to the next section**](#testing-the-website) otherwise continue as we will generate a key and add it to Github.
