--- a/_book-wordpress-to-jekyll/17.md
+++ b/_book-wordpress-to-jekyll/17.md
@@ -1,5 +1,6 @@
 ---
 title: Testing the Website
+order_number: 17
 ---
 
 Having the ability to see every change to your website as you make them is one of the best things about Jekyll. As you develop the website or type away at an article and you save the file you're working on the website will regenerate and can be seen updated from the browser. You could even have the editor on one half of the screen and the browser in the other half.
