--- a/_book-wordpress-to-jekyll/19.md
+++ b/_book-wordpress-to-jekyll/19.md
@@ -1,5 +1,6 @@
 ---
 title: Plugins
+order_number: 19
 ---
 
 **Note**: According to an answer on [StackOverflow][1] plugins are not officially supported by Github Pages. Use them at your own risk. According to Github **some** plugins are [now officially supported](https://github.com/jekyll/jekyll/issues/325), but the majority of them remain unsupported.
