--- a/_book-wordpress-to-jekyll/2.md
+++ b/_book-wordpress-to-jekyll/2.md
@@ -1,5 +1,6 @@
 ---
 title: About the Author
+order_number: 2
 ---
 
 Valentino Urbano is an iOS and Web Developer from Milan, Italy. Working on his own he pursues his passions as a programmer.
