--- a/_book-wordpress-to-jekyll/20.md
+++ b/_book-wordpress-to-jekyll/20.md
@@ -1,5 +1,6 @@
 ---
 title: More About Your Site Structure
+order_number: 20
 ---
 
 We've already done [a basic introduction](#site-structure) of the folder structure of the site and what each folder contains. We are not going to examine each section in more detail:
