--- a/_book-wordpress-to-jekyll/23.md
+++ b/_book-wordpress-to-jekyll/23.md
@@ -1,5 +1,6 @@
 ---
 title:  License and Readme
+order_number: 23
 ---
 
 It's always a nice practice to include a `README.md` and a `LICENSE` file if you're going to make your site open source.
