--- a/_book-wordpress-to-jekyll/26.md
+++ b/_book-wordpress-to-jekyll/26.md
@@ -1,5 +1,6 @@
 ---
 title: Collections
+order_number: 26
 ---
 
-Collections are for all the content that is not timed based.
+Collections are for all the content that is not timed based. [TODO: they can also be ime based ???]
