--- a/_book-wordpress-to-jekyll/28.md
+++ b/_book-wordpress-to-jekyll/28.md
@@ -1,5 +1,6 @@
 ---
 title: Continous Integration
+order_number: 28
 ---
 
 You made it this far, it's time to go further into the rabbit hole. I would like to make sure that I don't push breaking changes to master which gets automatically published to my website and might make some pages unreachable. For that goal, I will have [Travis](https://travis-ci.org) building my website for me and checking that it works before allowing a change to be merged back to the master branch. On top of that, you could add a script that checks for errors in the HTML, another to check your writing style and so on, the possibilities are endless. If you have any idea let me know on [Twitter](https://twitter.com/valentinourbano).
