--- a/_book-wordpress-to-jekyll/30.md
+++ b/_book-wordpress-to-jekyll/30.md
@@ -1,5 +1,6 @@
 ---
 title: Cleaning up the mess left by WordPress
+order_number: 30
 ---
 
 I've used the [WordpPress to Jekyll][11] exporter to convert the articles to Markdown. Once you export all of the markdown files you need might think that the work is done and you just need to drop them into your new Jekyll site and build it. Almost, but not quite.
