--- a/_book-wordpress-to-jekyll/31.md
+++ b/_book-wordpress-to-jekyll/31.md
@@ -1,5 +1,6 @@
 ---
 title: Metadata
+order_number: 31
 ---
 
 Every single header of every blog post was messed up by some tag that each WordPress plugin or WordPress itself decided to add for its own reason. This was so bad that even the "author" field was scrambled and Jekyll couldn't properly parse it so it wouldn't show the author in any of the articles if you tried publishing them if it would even build.
