--- a/_book-wordpress-to-jekyll/33.md
+++ b/_book-wordpress-to-jekyll/33.md
@@ -1,5 +1,6 @@
 ---
 title: Footnotes and Images
+order_number: 33
 ---
 
 Most of the footnotes and images were broken as well. There is not a quick solution for it since they are very different for each article so you'll have to go through your posts one by one to fix them.
