--- a/_book-wordpress-to-jekyll/34.md
+++ b/_book-wordpress-to-jekyll/34.md
@@ -1,5 +1,6 @@
 ---
 title: Final Tweaks
+order_number: 34
 ---
 
 If you want a Jekyll blog that's all you need. You could have a very basic one for way less, but the guide above covers most use cases. You still need to be a programmer or at least comfortable around the command line to build it and update it so it is not for everyone, but having the possibility of running it without a server with very minimal overhead and cost is a killer.
