--- a/_book-wordpress-to-jekyll/37.md
+++ b/_book-wordpress-to-jekyll/37.md
@@ -1,5 +1,6 @@
 ---
 title: Extra - What if it shutdowns and need to migrate
+order_number: 37
 ---
 
 I could still fix it myself if that was the only option, but I wouldn't have the time to maintain such a framework by myself. Jekyll being the most used one of the bunch is the least likely to get shut down or having people losing interest and stop developing for it. Of course, I might be wrong and Jekyll may be the first one to shut down, you never know. If that's the case, with all the content being in plain markdown the migration is going to be less traumatic than the initial one from WordPress.
