--- a/_book-wordpress-to-jekyll/39.md
+++ b/_book-wordpress-to-jekyll/39.md
@@ -1,5 +1,6 @@
 ---
 title: Extra - Configuring Netfily
+order_number: 39
 ---
 
 In the beginning I've listed Netflify as an alternative, but you can also use both Github and Netlify. Github will be where you host the code of the website and Netlify will take care of building your website and serving it. This way we won't be using Github Pages and will lose its ease of use, but we will gain all the features from Netlify:
