--- a/_book-wordpress-to-jekyll/4.md
+++ b/_book-wordpress-to-jekyll/4.md
@@ -1,5 +1,6 @@
 ---
 title: Preface
+order_number: 4
 ---
 
 When I embarked on this journey I did not find a clear book with step by step instructions on what to do. The basics of the migration process are pretty straightforward for someone who is used to this sort of things, but for someone new the can be daunting. It doesn't need to be. This book will teach you how to migrate your WordPress blog (or any other kind of blog) to a static website step by step.
