--- a/_book-wordpress-to-jekyll/40.md
+++ b/_book-wordpress-to-jekyll/40.md
@@ -1,5 +1,6 @@
 ---
 title: Extra - Beginner Github Automation
+order_number: 40
 ---
 
 There are a few bots that are useful and will take away some struggle with managing the low level details of the website that we don't care about. These bots are free and available for both open source (public) and private repositories.
