--- a/_book-wordpress-to-jekyll/41.md
+++ b/_book-wordpress-to-jekyll/41.md
@@ -1,5 +1,6 @@
 ---
 title: Extra - Advanced Github Automation
+order_number: 41
 ---
 
 This chapter is totally optional. Most of the bots and automation techniques are free only for open source repositories and paid for private ones.
