--- a/_book-wordpress-to-jekyll/42.md
+++ b/_book-wordpress-to-jekyll/42.md
@@ -1,5 +1,6 @@
 ---
 title: Conclusion
+order_number: 42
 ---
 
 You now have a fully functioning website with a custom domain name hosted on Github Pages. With a simple commit (and push) you can add content. Additionally, you're going to have all the changes tracked so you can easily revert back in case of mistakes or keep track of when you made a particular change.
