--- a/_book-wordpress-to-jekyll/5.md
+++ b/_book-wordpress-to-jekyll/5.md
@@ -1,5 +1,6 @@
 ---
 title: Introduction
+order_number: 5
 ---
 
 This book includes a deep dive on what you need to do if you want to embark in the same journey I overtook by migrating my website from WordPress to Jekyll.
