--- a/_book-wordpress-to-jekyll/6.md
+++ b/_book-wordpress-to-jekyll/6.md
@@ -1,5 +1,6 @@
 ---
 title: Requirements
+order_number: 6
 ---
 
 To be able to follow along you need to be familiar with the command line and have basic html and css knowledge. While the latter can be optional (but strongly recommended) the former is necessary since most of your daily tasks such as updating the website require the command line.
