--- a/_book-wordpress-to-jekyll/7.md
+++ b/_book-wordpress-to-jekyll/7.md
@@ -1,5 +1,6 @@
 ---
 title: The Various Options For Static Websites
+order_number: 7
 ---
 
 The last few years has seen an explosion in static website generators. The end result is the same, but they all are unique and different in how they get there.
