--- a/_book-wordpress-to-jekyll/8.md
+++ b/_book-wordpress-to-jekyll/8.md
@@ -1,5 +1,6 @@
 ---
 title: Why Choosing Jekyll
+order_number: 8
 ---
 
 The top 4 entries in the list are great choices and you can't go wrong with any of them.
