--- a/_book-wordpress-to-jekyll/1.md
+++ b/_book-wordpress-to-jekyll/1.md
@@ -1,5 +1,6 @@
 ---
 title: About the Book
+order_number: 1
 ---
 
 This ebook is available online at no cost. If you want to pledge a small amount of money to support its creation you can purchase the ebook version. Links are at the bottom of the page.
