--- a/_book-wordpress-to-jekyll/24.md
+++ b/_book-wordpress-to-jekyll/24.md
@@ -1,5 +1,6 @@
 ---
 title: Introduction To Advanced Topics
+order_number: 24
 ---
 
 In this section, we are going to dive more in-depth into a few solutions I've adopted specifically for my website to solve some problems the stock version didn't solve or was not particularly clear on how to implement. Since it's live on Github you can check it all out any time.
