--- a/_book-wordpress-to-jekyll/25.md
+++ b/_book-wordpress-to-jekyll/25.md
@@ -1,5 +1,6 @@
 ---
 title: The `_data` Folder
+order_number: 25
 ---
 
 I created an `apps.yml` file to store all the data that you see in the [apps section](/apps).
