--- a/_book-wordpress-to-jekyll/1.md
+++ b/_book-wordpress-to-jekyll/1.md
@@ -3,4 +3,4 @@ title: About the Book
 order_number: 1
 ---
 
-This ebook is available online at no cost. If you want to pledge a small amount of money to support its creation you can purchase the ebook version. Links are at the bottom of the page.
+This ebook is available online at no cost. If you want to pledge a small amount of money to support its creation you can purchase the ebook version (Links below).
