--- a/_posts/2020-01-08-testing.md
+++ b/_posts/2020-01-08-testing.md
@@ -15,11 +15,11 @@ Even if you have a fully unit tested app you will not be totally covered. Unit T
 
 The client complained that the app was slow at loading a certain screen. We test the app as we develop it so we were pretty confused since it was working fine for us. I checked the response time of the server and the time for the app to become interactive, but it was really quick. No problems there. We only test on new devices since that's what all developes have and have unit tests on top of it. So I tried testing on an older device, the idea being that since we were loading a very large amount of data it might have some problems with it. It was definitely slower.
 
-At this point we started thinkering about performance tests. We could add them, but those would run on powerful mac hardware or our new devices so if the problem was like this one, which only happens when the device does not having enough hardware resources because of its age it would be useless.
+At this point we started tinkering about performance tests. We could add them, but those would run on powerful mac hardware or our new devices so if the problem was like this one, which only happens when the device does not having enough hardware resources because of its age it would be useless.
 
 After some debugging we found out that the problem was decoding the (very big) JSON response from the server was taking .5 seconds on an iPhone 11 and a whopping 4.5 seconds on a 5S (the oldest device we support). **We had this intuition from a while, but until we could actually test it and measure the real time taken in each method we could not say for use.**
 
-We could not drop support of older devices, but there was also not much we could do to increase the perfomance of the decoding process since it is just Apple's frameworks. Migrating the whole app to a different framework that was faster just because of this would have required to big of a time commitment, but it would only be a band aid. It would not address the real problem just improve the symptoms.
+We could not drop support of older devices, but there was also not much we could do to increase the performance of the decoding process since it is just Apple's frameworks. Migrating the whole app to a different framework that was faster just because of this would have required to big of a time commitment, but it would only be a band aid. It would not address the real problem just improve the symptoms.
 
 The real problem is the response from the server. There is no time when a text response should be even close to 2MB in size. Changing this would require relatively big changes for both the mobile apps and the rest api, but is the only real solution to the problem.
 
