--- a/_posts/2020-01-08-testing.md
+++ b/_posts/2020-01-08-testing.md
@@ -17,7 +17,9 @@ The client complained that the app was slow at loading a certain screen. We test
 
 At this point we started tinkering about performance tests. We could add them, but those would run on powerful mac hardware or our new devices so if the problem was like this one, which only happens when the device does not have enough hardware resources because of its age it would be useless.
 
-After some debugging we found out that the problem was decoding the (very big) JSON response from the server was taking .5 seconds on an iPhone 11 and a whopping 4.5 seconds on a 5S (the oldest device we support). **We had this intuition from a while, but until we could actually test it and measure the real time taken in each method we could not say for use.**
+After some debugging we found out that the problem was decoding the (very big) JSON response from the server was taking .5 seconds on an iPhone 11 and a whopping 4.5 seconds on a 5S (the oldest device we support).
+
+**We had this intuition from a while, but until we could actually test it and measure the real time taken in each method we could not say for use.**
 
 We could not drop support of older devices, but there was also not much we could do to increase the performance of the decoding process since it is just Apple's frameworks. Migrating the whole app to a different framework that was faster just because of this would have required too big of a time commitment, but it would only be a band aid. It would not address the real problem, just improve the symptoms.
 
