--- a/_posts/2018-11-25-Writerise2.md
+++ b/_posts/2018-11-25-Writerise2.md
@@ -66,5 +66,5 @@ It's also interesting to see that they're not counting right either since each e
 [Original version saved as a gist][3].
 
 [1]: https://200wordsaday.com/words/writerise-track-your-writing-95bf6e2b8b94bb
-[2]: https://twitter.com/valentinourbano
+[2]: {{ site.twitter_handle }}
 [3]: https://gist.github.com/valeIT/a8724dc4cea3c665bddf22462c28c6f6
