--- a/_posts/2018-12-07-Writerise4.md
+++ b/_posts/2018-12-07-Writerise4.md
@@ -30,4 +30,4 @@ An even better way would be to find the name of the open document and track that
 [^1]: If the application was in focus, you were in a session, once it lost focus you were out.
 
 [0]: https://200wordsaday.com/words/writerise-track-your-writing-95bf6e2b8b94bb
-[3]: https://twitter.com/valentinourbano
+[3]: {{ site.twitter_handle }}
